# tg_notify_assignment

./: Dockerfile  Makefile  README.md  celerybeat-schedule  docker-compose.local.yaml  docker-compose.yaml  manage.py  pyproject.toml  requirements.txt  tg_msg_send.py
notifications/: admin.py  helper.py  models.py  signals.py  tasks.py
notifications/management/commands/: bot.py
notifications/migrations/: 0001_initial.py  0002_customer_is_tg_subscribed.py  0003_balancehistory.py  0004_remove_customer_is_tg_subscribed_and_more.py
tg_notifier_assignment/: asgi.py  celery.py  config.py  settings.py  urls.py  wsgi.py
