[tool.poetry]
name = "tg-notifier-assignment"
version = "0.1.0"
description = ""
authors = ["readmost <rauan.amangeldiyev@nu.edu.kz>"]
readme = "README.md"
packages = [{include = "tg_notifier_assignment"}]

[tool.poetry.dependencies]
python = "^3.9"
pytelegrambotapi = "^4.14.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
